Post review fix of Bug#17431 INSERT IGNORE INTO returns failed: 1296: err 4350 'Transaction already aborted', shared locking is sufficient